# vigil

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  index.html
.github/workflows/: release.yml
deploy/: docker-compose.yml
deploy/helm/vigil/: Chart.yaml  values.yaml
deploy/helm/vigil/templates/: deployment.yaml  pvc.yaml
docs/: HOW-IT-WORKS.md  REFERENCE.md  SECURITY.md
skills/setup-vigil/: SKILL.md
src/: dash.rs  main.rs
