[package]
name = "vigil"
version = "0.1.0"
edition = "2021"
description = "VigilAI CLI — the open wrapper. Phase-1: agentless `investigate`."
license = "Apache-2.0"

[[bin]]
name = "vigil"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
serde_json = "1"
# engine is the private core; path dep during dev (repos sit side by side).
vigil-engine = { path = "../vigil-engine" }
